--- a/Coding.ipynb
+++ b/Coding.ipynb
@@ -28,6 +28,400 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 扒网页"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rank</th>\n",
+       "      <th>Company</th>\n",
+       "      <th>Q1</th>\n",
+       "      <th>Q2</th>\n",
+       "      <th>Q3</th>\n",
+       "      <th>Q4</th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Tencent</td>\n",
+       "      <td>$5,502M</td>\n",
+       "      <td>$4,687M</td>\n",
+       "      <td>$4,903M</td>\n",
+       "      <td>$4,641M</td>\n",
+       "      <td>$19,733M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Sony*</td>\n",
+       "      <td>$3,079M</td>\n",
+       "      <td>$3,117M</td>\n",
+       "      <td>$3,612M</td>\n",
+       "      <td>$4,410M</td>\n",
+       "      <td>$14,218M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Microsoft*</td>\n",
+       "      <td>$2,019M</td>\n",
+       "      <td>$2,033M</td>\n",
+       "      <td>$2,311M</td>\n",
+       "      <td>$3,391M</td>\n",
+       "      <td>$9,754M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Apple*</td>\n",
+       "      <td>$2,091M</td>\n",
+       "      <td>$2,303M</td>\n",
+       "      <td>$2,524M</td>\n",
+       "      <td>$2,535M</td>\n",
+       "      <td>$9,453M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Activision Blizzard</td>\n",
+       "      <td>$1,872M</td>\n",
+       "      <td>$1,537M</td>\n",
+       "      <td>$1,352M</td>\n",
+       "      <td>$2,131M</td>\n",
+       "      <td>$6,892M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Google*</td>\n",
+       "      <td>$1,383M</td>\n",
+       "      <td>$1,463M</td>\n",
+       "      <td>$1,522M</td>\n",
+       "      <td>$2,129M</td>\n",
+       "      <td>$6,497M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>NetEase</td>\n",
+       "      <td>$1,346M</td>\n",
+       "      <td>$1,546M</td>\n",
+       "      <td>$1,590M</td>\n",
+       "      <td>$1,694M</td>\n",
+       "      <td>$6,177M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>EA</td>\n",
+       "      <td>$1,582M</td>\n",
+       "      <td>$1,137M</td>\n",
+       "      <td>$1,286M</td>\n",
+       "      <td>$1,289M</td>\n",
+       "      <td>$5,294M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Nintendo</td>\n",
+       "      <td>$697M</td>\n",
+       "      <td>$730M</td>\n",
+       "      <td>$751M</td>\n",
+       "      <td>$2,111M</td>\n",
+       "      <td>$4,288M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Bandai Namco</td>\n",
+       "      <td>$807M</td>\n",
+       "      <td>$567M</td>\n",
+       "      <td>$693M</td>\n",
+       "      <td>$674M</td>\n",
+       "      <td>$2,741M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>11</td>\n",
+       "      <td>TakeTwo Interactive</td>\n",
+       "      <td>$450M</td>\n",
+       "      <td>$388M</td>\n",
+       "      <td>$493M</td>\n",
+       "      <td>$1,249M</td>\n",
+       "      <td>$2,580M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>12</td>\n",
+       "      <td>Nexon</td>\n",
+       "      <td>$803M</td>\n",
+       "      <td>$424M</td>\n",
+       "      <td>$615M</td>\n",
+       "      <td>$409M</td>\n",
+       "      <td>$2,252M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>13</td>\n",
+       "      <td>Ubisoft</td>\n",
+       "      <td>$666M</td>\n",
+       "      <td>$449M</td>\n",
+       "      <td>$416M</td>\n",
+       "      <td>$691M</td>\n",
+       "      <td>$2,221M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>14</td>\n",
+       "      <td>Netmarble</td>\n",
+       "      <td>$475M</td>\n",
+       "      <td>$469M</td>\n",
+       "      <td>$493M</td>\n",
+       "      <td>$456M</td>\n",
+       "      <td>$1,893M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>15</td>\n",
+       "      <td>Warner Bros*</td>\n",
+       "      <td>$404M</td>\n",
+       "      <td>$432M</td>\n",
+       "      <td>$435M</td>\n",
+       "      <td>$564M</td>\n",
+       "      <td>$1,835M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>16</td>\n",
+       "      <td>Square Enix</td>\n",
+       "      <td>$425M</td>\n",
+       "      <td>$288M</td>\n",
+       "      <td>$447M</td>\n",
+       "      <td>$423M</td>\n",
+       "      <td>$1,583M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>17</td>\n",
+       "      <td>NCSoft</td>\n",
+       "      <td>$366M</td>\n",
+       "      <td>$322M</td>\n",
+       "      <td>$330M</td>\n",
+       "      <td>$324M</td>\n",
+       "      <td>$1,343M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>18</td>\n",
+       "      <td>Cyber Agent</td>\n",
+       "      <td>$359M</td>\n",
+       "      <td>$315M</td>\n",
+       "      <td>$327M</td>\n",
+       "      <td>$323M</td>\n",
+       "      <td>$1,324M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>19</td>\n",
+       "      <td>Mixi</td>\n",
+       "      <td>$410M</td>\n",
+       "      <td>$261M</td>\n",
+       "      <td>$282M</td>\n",
+       "      <td>$268M</td>\n",
+       "      <td>$1,222M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>20</td>\n",
+       "      <td>Konami</td>\n",
+       "      <td>$272M</td>\n",
+       "      <td>$267M</td>\n",
+       "      <td>$326M</td>\n",
+       "      <td>$346M</td>\n",
+       "      <td>$1,210M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>21</td>\n",
+       "      <td>Aristocrat Leisure</td>\n",
+       "      <td>$167M</td>\n",
+       "      <td>$326M</td>\n",
+       "      <td>$326M</td>\n",
+       "      <td>$326M</td>\n",
+       "      <td>$1,146M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>22</td>\n",
+       "      <td>37 Interactive*</td>\n",
+       "      <td>$232M</td>\n",
+       "      <td>$240M</td>\n",
+       "      <td>$319M</td>\n",
+       "      <td>$300M</td>\n",
+       "      <td>$1,091M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>23</td>\n",
+       "      <td>Perfect World*</td>\n",
+       "      <td>$197M</td>\n",
+       "      <td>$208M</td>\n",
+       "      <td>$206M</td>\n",
+       "      <td>$285M</td>\n",
+       "      <td>$897M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>24</td>\n",
+       "      <td>Sega</td>\n",
+       "      <td>$184M</td>\n",
+       "      <td>$189M</td>\n",
+       "      <td>$219M</td>\n",
+       "      <td>$240M</td>\n",
+       "      <td>$832M</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>25</td>\n",
+       "      <td>Capcom</td>\n",
+       "      <td>$384M</td>\n",
+       "      <td>$122M</td>\n",
+       "      <td>$181M</td>\n",
+       "      <td>$121M</td>\n",
+       "      <td>$809M</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Rank               Company        Q1        Q2        Q3        Q4  \\\n",
+       "0     1               Tencent   $5,502M   $4,687M   $4,903M   $4,641M   \n",
+       "1     2                 Sony*   $3,079M   $3,117M   $3,612M   $4,410M   \n",
+       "2     3            Microsoft*   $2,019M   $2,033M   $2,311M   $3,391M   \n",
+       "3     4                Apple*   $2,091M   $2,303M   $2,524M   $2,535M   \n",
+       "4     5   Activision Blizzard   $1,872M   $1,537M   $1,352M   $2,131M   \n",
+       "5     6               Google*   $1,383M   $1,463M   $1,522M   $2,129M   \n",
+       "6     7               NetEase   $1,346M   $1,546M   $1,590M   $1,694M   \n",
+       "7     8                    EA   $1,582M   $1,137M   $1,286M   $1,289M   \n",
+       "8     9              Nintendo     $697M     $730M     $751M   $2,111M   \n",
+       "9    10          Bandai Namco     $807M     $567M     $693M     $674M   \n",
+       "10   11   TakeTwo Interactive     $450M     $388M     $493M   $1,249M   \n",
+       "11   12                 Nexon     $803M     $424M     $615M     $409M   \n",
+       "12   13               Ubisoft     $666M     $449M     $416M     $691M   \n",
+       "13   14             Netmarble     $475M     $469M     $493M     $456M   \n",
+       "14   15          Warner Bros*     $404M     $432M     $435M     $564M   \n",
+       "15   16           Square Enix     $425M     $288M     $447M     $423M   \n",
+       "16   17                NCSoft     $366M     $322M     $330M     $324M   \n",
+       "17   18           Cyber Agent     $359M     $315M     $327M     $323M   \n",
+       "18   19                  Mixi     $410M     $261M     $282M     $268M   \n",
+       "19   20                Konami     $272M     $267M     $326M     $346M   \n",
+       "20   21    Aristocrat Leisure     $167M     $326M     $326M     $326M   \n",
+       "21   22       37 Interactive*     $232M     $240M     $319M     $300M   \n",
+       "22   23        Perfect World*     $197M     $208M     $206M     $285M   \n",
+       "23   24                  Sega     $184M     $189M     $219M     $240M   \n",
+       "24   25                Capcom     $384M     $122M     $181M     $121M   \n",
+       "\n",
+       "        Total  \n",
+       "0    $19,733M  \n",
+       "1    $14,218M  \n",
+       "2     $9,754M  \n",
+       "3     $9,453M  \n",
+       "4     $6,892M  \n",
+       "5     $6,497M  \n",
+       "6     $6,177M  \n",
+       "7     $5,294M  \n",
+       "8     $4,288M  \n",
+       "9     $2,741M  \n",
+       "10    $2,580M  \n",
+       "11    $2,252M  \n",
+       "12    $2,221M  \n",
+       "13    $1,893M  \n",
+       "14    $1,835M  \n",
+       "15    $1,583M  \n",
+       "16    $1,343M  \n",
+       "17    $1,324M  \n",
+       "18    $1,222M  \n",
+       "19    $1,210M  \n",
+       "20    $1,146M  \n",
+       "21    $1,091M  \n",
+       "22      $897M  \n",
+       "23      $832M  \n",
+       "24      $809M  "
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "website_url = requests.get(\"https://newzoo.com/insights/rankings/top-25-companies-game-revenues/\").text\n",
+    "from bs4 import BeautifulSoup as bs\n",
+    "soup = bs(website_url, 'lxml')\n",
+    "my_table = soup.find('table', {'class': 'rankingtable first'})\n",
+    "Ranklst = []\n",
+    "Companylst = []\n",
+    "q1lst = []\n",
+    "q2lst = []\n",
+    "q3lst = []\n",
+    "q4lst = []\n",
+    "totallst = []\n",
+    "for tr in my_table.find_all('tr')[1:]:\n",
+    "    tds = tr.find_all('td')\n",
+    "    Ranklst.append(tds[1].text)\n",
+    "    Companylst.append(tds[2].text)\n",
+    "    q1lst.append(tds[3].text)\n",
+    "    q2lst.append(tds[4].text)\n",
+    "    q3lst.append(tds[5].text)\n",
+    "    q4lst.append(tds[6].text)\n",
+    "    totallst.append(tds[7].text)\n",
+    "list_of_tuples = list(zip(Ranklst, Companylst, q1lst, q2lst, q3lst, q4lst, totallst))\n",
+    "df = pd.DataFrame(list_of_tuples, columns = ['Rank', 'Company', 'Q1', 'Q2', 'Q3', 'Q4', 'Total'])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df.to_excel(r'/Users/Ragieon/Desktop/Deloitte/Deloitte/Top 25 Public Companies by Game Revenues.xlsx')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
